# router-cli

./: .gitignore  AGENTS.md  README.md  cliff.toml  config.example.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: DEVELOPMENT.md
src/router_cli/: __init__.py  client.py  commands.py  config.py  display.py  formatters.py  main.py  models.py  parser.py
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_display.py  test_main.py
tests/fixtures/: device_info.html  dhcpinfo.html  info.html  logview.html  routeinfo.html  statistics.html  wlstationlist.html
