[project]
name = "router-cli"
version = "0.2.0"
description = "CLI tool to manage D-Link DSL-2750U router"
readme = "README.md"
authors = [{ name = "d3vr", email = "hi@f3.al" }]
requires-python = ">=3.10"
dependencies = ["tomli>=2.0.0; python_version < '3.11'"]
license = { text = "MIT" }
keywords = ["router", "cli", "dlink", "dsl-2750u", "network", "admin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/d3vr/router-cli"
Repository = "https://github.com/d3vr/router-cli"
Issues = "https://github.com/d3vr/router-cli/issues"

[project.scripts]
router = "router_cli.main:main"

[dependency-groups]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
